--- a/index.qmd
+++ b/index.qmd
@@ -7,15 +7,15 @@ output:
 
 ---
 
-This document contains instructions for how to access and utilise NCI's HPC, Gadi for University of Sydney researchers. Please be mindful this is not an exhaustive resource for using the NCI Gadi HPC. It is only intended to orientate you to the system and navigate the Gadi user documentation.
+This site contains instructions for how to access and utilise the [National Computing Infrastructure Gadi High Performance Computer](https://nci.org.au/our-systems), in the context of University of Sydney researchers. Please be mindful this is not an exhaustive resource for using the NCI Gadi HPC. It is only intended to orientate you to the system and navigate the comprehensive [NCI user documentation](https://opus.nci.org.au/spaces/Help/pages/12583138/NCI+Help).
 
-NCI’s HPC systems are designed to handle complex computational tasks, such as simulations, data analysis, and modeling, for a wide range of scientific disciplines, including climate modeling, genomics, astronomy, and materials science.
+NCI systems are designed to handle complex computational tasks, such as simulations, data analysis, and modeling, for a wide range of scientific disciplines, including climate modeling, genomics, astronomy, and materials science.
 
-The University of Sydney provides its researchers with subsidised access to NCI’s infrastructure. After creating an NCI account and project, visit [https://nci.sydney.edu.au/](https://nci.sydney.edu.au/) to request Service Units for your project (note: you must be on the University of Sydney Network/VPN).
+The University of Sydney provides its researchers with subsidised access to NCI. After creating an [NCI account and project](https://my.nci.org.au/mancini/) within the Sydney Scheme, you may visit [https://nci.sydney.edu.au/](https://nci.sydney.edu.au/) to request Service Units for your project (note: you must be on the University of Sydney Network/VPN).
 
 ## Support
 
-SIH is limited in the support it can provide for NCI Gadi users. If you are new to HPC and Gadi, we expect you will attend [SIH's Intro to HPC](https://sydney-informatics-hub.github.io/training.artemis/) and [NCI's Intro to Gadi](https://opus.nci.org.au/spaces/Help/pages/48497461/NCI+Training+and+Educational+Events) courses. Additionally, familiarise yourself with Gadi using the [NCI Gadi user guide](https://opus.nci.org.au/display/Help/Gadi+User+Guide):
+SIH is limited in the support it can provide for NCI Gadi users. If you are new to HPC and Gadi, we expect you will attend [NCI's Intro to Gadi](https://opus.nci.org.au/spaces/Help/pages/48497461/NCI+Training+and+Educational+Events) courses. Additionally, familiarise yourself with Gadi using the [NCI Gadi user guide](https://opus.nci.org.au/display/Help/Gadi+User+Guide):
 
 * [SIH training calendar](https://www.sydney.edu.au/research/facilities/sydney-informatics-hub/workshops-and-training/training-calendar.html)
 * [NCI training calendar](https://opus.nci.org.au/display/Help/NCI+Training+and+Educational+Events)
