--- a/notebooks/08_job_script.qmd
+++ b/notebooks/08_job_script.qmd
@@ -38,7 +38,7 @@ Once submitted to the PBS job scheduler with the `qsub` command, the scheduler r
 
 ## Job scheduling priority
 
-On Artemis, you will have some familiarity with the concept of 'fair share' use, where compute jobs you run increase your project's 'fair share weight' which temporarily decreases the priority of your jobs in the queue. This is **not the case on Gadi**, where all jobs have equal priority. The only factors that limit how quickly your jobs leave the queue and start running are the resources you request combined with current resource availability. In order to have your job be queued (and not 'held' after submission), you must have sufficient KSU in your project. This will be described under [queue charge rates](#queue-charge-rates).
+On Artemis, you will have some familiarity with the concept of **fair share** use, where compute jobs you run increase your project's 'fair share weight' which temporarily decreases the priority of your jobs in the queue. This is **not the case on Gadi**, where all jobs have equal priority. The only factors that limit how quickly your jobs leave the queue and start running are the resources you request combined with current resource availability. In order to have your job be queued (and not 'held' after submission), you must have sufficient KSU in your project. This will be described under [queue charge rates](#queue-charge-rates).
 
 
 
@@ -76,9 +76,9 @@ Below is a simple example of the PBS directives portion of a Gadi job script. Fo
 
 - The `-l storage` directive is required on Gadi but not Artemis. Failure to include required storage locations will kill the job, for example with `No such file or directory` errors
 - On Gadi, users must review their resoure requirements against the queue structure and limits in order to **request a specific queue**. On Artemis, the scheduler managed this automatically according to requested resources and queue loads
-- Maximum walltime for any queue is 48 hours. For large numbers of nodes requested in a single job, the maximum walltime reduces. This is described in the [queue limits](https://opus.nci.org.au/spaces/Help/pages/236881198/Queue+Limits...) page. See [Working within walltime limit](./NN_walltime_limit.qmd) for more details 
+- Maximum walltime for any queue is 48 hours. For large numbers of nodes requested in a single job, the maximum walltime reduces. This is described in the [queue limits](https://opus.nci.org.au/spaces/Help/pages/236881198/Queue+Limits...) page. See [Working within walltime limit](./12_walltime.qmd) for more details 
 - The requested resources are checked against the quantity of remaining KSU in the project specified at `-P`. If there is insufficient KSU to run the job, the job will be held. This will show as `H` status when the job is queried with `qstat`. See [queue charge rates](#queue-charge-rates) for more details 
-- Job arrays (eg `$#PBS J 1-1000`) are not permitted on Gadi. See [Parallel jobs](./13_parallel_jobs.qmd) and [nci-parallel](https://opus.nci.org.au/spaces/Help/pages/248840680/Nci-parallel...) for more details
+- Job arrays (eg `$#PBS J 1-1000`) are not permitted on Gadi. See [Parallel jobs](./13_parralel_jobs.qmd) and [nci-parallel](https://opus.nci.org.au/spaces/Help/pages/248840680/Nci-parallel...) for more details
 - Unlike Artemis, Gadi compute nodes lack internet access. If you have a job script that relies on an external network call such as reading from a live database, you will need to adapt your method (for example pre-downloading the required information with `copyq` before running the compute job) or use an alternate platform such as [Nirin](https://opus.nci.org.au/spaces/Help/pages/152207472/Nirin+Cloud+User+Guide)
 
 
@@ -151,7 +151,7 @@ View the available queues on the [Gadi queue structure page](https://opus.nci.or
 
 Each queue has different hardware, limits, and charge rates. Before submitting any jobs on Gadi, it is important to review this page along with the [queue limits page](https://opus.nci.org.au/spaces/Help/pages/236881198/Queue+Limits...) which describes each queue in more detail. 
 
-You will note that each queue also has a corresponding queue that ends in `-exec`. You cannot submit directly to the `-exec` (execution) queue - your jobs will be placed there via the 'route queue' that you submit to. For example, for a job you want to run on the Cascade Lake `normal` queue, you will include the directive `#PBS -q normal` (submit to route queue) and the job will run on `normal-exec` (execution queue). 
+You will note that each queue also has a corresponding queue that ends in `-exec`. You cannot submit directly to the `-exec` (execution) queue. Your jobs will be placed on the execution queue via the 'route queue' that you submit to. For example, for a job you want to run on the Cascade Lake `normal` queue, you will include the directive `#PBS -q normal` (submit to route queue) and the job will run on `normal-exec` (execution queue). 
 
 ### Queue charge rates 
 
@@ -162,6 +162,8 @@ Each new NCI project under the Sydney Scheme is granted 1 KSU by default, and re
 A `service unit` is based on a CPU hour, ie 'one hour of walltime on one CPU'. Each queue has a different charge rate applied to the CPU hour, so that one CPU hour on a given resource may cost between 1.25 SU and 6 SU, depending on the charge rate for that queue. More specialised and scarce resources are charged at a higher rate to ensure that only users who genuinely need these use them. 
 
 The charge rates can be found in column 4 of the [queue limits table](https://opus.nci.org.au/spaces/Help/pages/90308823/Queue+Limits). 
+
+It's important to understand that requested memory also impacts the charge rate, not just the requested CPU, walltime and queue. In each queue, a CPU has an allocated amount of memory for accounting purposes. For example, in the Cascade Lake `normal` queue, there are 48 CPU and 192 GB total RAM. The amount of memory per CPU for accounting purposes is therefore 192 / 48 = 4 GB. If you request 1 CPU and 4 GB RAM, only the CPU affects the charge rate, as you are using only the memory allocation for one CPU. If however you request 1 CPU and 8 GB RAM, your charge rate will be based off 2 CPU of use, since you are using the memory allowance of 2 CPU. Note this is 'for accounting purposes' only, ie it is technically feasible for your job to run on 1 CPU and access 8 GB RAM (or more). This accounting is described on the NCI [job costs](https://opus.nci.org.au/spaces/Help/pages/236880942/Job+Costs...) page, and will also be sumamrised below. 
 
 **Don't be alarmed by the charge rates:** please submit your job to the most appropriate queue based on required resources. The accounting method combined with stricter walltimes, newer hardware and software, and more vast physcial resources compared to Artemis will likely see your compute jobs complete in a faster turnaround time compared to what you are used to. 
 
@@ -192,14 +194,18 @@ This will show the total allocated for the current quarter, the amount used, the
 The required SU available to run the job can be calculated by the formula:
 
 ```default
-walltime-hours * CPU * charge-rate
+walltime-hours * MAX (CPU|MEM) * charge-rate
 ```
+
+where MAX is based on the greater value of CPUs or proportion of node memory requested. 
 
 so for the above example:
 
 ```default
 12 h * 48 CPU * 3 charge rate = 1728 SU
 ```
+
+In this case, MAX is based on CPU, since the per-CPU memory request (1470 GB / 48 CPU = 30.625 GB) is less than or equal to the maximum proportion of memory per CPU on the `hugemem` queue. 
 
 Since 1728 SU is more than the 1 KSU the project has available, the job cannot run. You will need to either:
 
@@ -240,6 +246,7 @@ hugemem, with 12 CPU and 384 GB memory, or hugemembw, with 14 CPU as CPUs must b
 Which would be the better choice? 
 
 If the job ran for 2 hours, charge rate would be:
+
 hugemem: 12 CPU * 2 h * 3 charge rate = 72 SU
 hugemembw: 14 CPU * 2 h * 1.25 charge rate = 35 SU. 
 
@@ -289,7 +296,7 @@ gpuvolta or dgxa100 queue
 
 The only Gadi queue with internet access is `copyq`. This queue is not suitable for running compute tasks. It allows only single-core jobs and has a maximum walltime of 10 hours. Jobs that require up-to-date information retrieval from external servers have a few options: 
 
-1. Split the job into two parts: a download or web query task submitted to `copyq`, ensuring that the retrieved data is saved to persistent disk (ie not the local-to-the-node storage that is deleted upon job completion), followed by a a compute job submitted to one of the appropriate compute queues, reading in the requried inputs saved from job 1. 
+1. Split the job into two parts: a download or web query task submitted to `copyq`, ensuring that the retrieved data is saved to persistent disk (ie not the [local-to-the-node SSD storage](https://opus.nci.org.au/spaces/Help/pages/236880086/Gadi+Resources...#GadiResources...-jobfs) that is deleted upon job completion), followed by a a compute job submitted to one of the appropriate compute queues, reading in the requried inputs saved from job 1. 
 2. Run the job via [ARE](https://opus.nci.org.au/spaces/Help/pages/162431120/ARE+User+Guide), which provides a graphical user interface run on Gadi's compute queues plus internet access capability. 
 3. Use NCI's [Nirin cloud](https://opus.nci.org.au/display/Help/Nirin+Cloud+User+Guide) instead of Gadi.  
 
@@ -312,9 +319,18 @@ For example, to start an interactive job with 4 CPU for 1 hour, enter the follow
 qsub -I -P <nci-project-code> -l walltime=00:01:00,ncpus=4,mem=16GB,storage=<required-storage-paths>,wd
 ```
 
-After you enter the command, you will receive a message `qsub: waiting for job <id>.gadi-pbs to start`. 
+After you enter the command, you will receive a message
 
-Once your interactive job has left the queue and started, you will receive a message `qsub: job <id>.gadi-pbs ready`. Notice that your command prompt has changed, indicating the node ID you are on instead of the login node ID. 
+```bash
+qsub: waiting for job <id>.gadi-pbs to start
+``` 
+
+Once your interactive job has left the queue and started, you will receive a message 
+```bash
+qsub: job <id>.gadi-pbs ready
+```
+
+Notice that your command prompt has changed, indicating the node ID you are on instead of the login node ID. 
 
 You can then interactively enter the commands required for your compute task. To terminate the interactive job, enter `exit`.
 
@@ -325,7 +341,7 @@ To support the use of long-running, low CPU and low memory demand processes, NCI
 
 Workflow management tools are a unique use case where the 'head job' requires internet access (provided through the persistent session) and access to the scheduler to submit a series of chained compute jobs to various queues depending on the unique workflow configuration. 
 
-**This service is NOT designed for computational work, large downloads, or other intensive tasks. These jobs should be submitted to the appropriate PBS queues.**
+This service is **NOT designed for computational work, large downloads, or other intensive tasks**. These jobs should be submitted to the appropriate PBS queues.
 
 
 
