--- a/notebooks/05_data_transfer.qmd
+++ b/notebooks/05_data_transfer.qmd
@@ -37,15 +37,15 @@ In this section, we will look at Data Transfer. For the remaining challenges, pl
 |                                           |                                       | - [Cannot restart after interruption]{style="color: red;"}     |
 +-------------------------------------------+---------------------------------------+----------------------------------------------------------------+
 | [rsync transfer from                      | Files up to a few GB.                 | - [Convenient for quickly copying data]{style="color: blue;"}  |
-|  Artemis terminal](#rs)                   |                                       | - [Restarts after interruption]{style="color: blue;"}          |
+|  Artemis terminal](#rs)                   |                                       | - [Can restart after interruption]{style="color: blue;"}       |
 |                                           |                                       | - [Uses login node for computation]{style="color: red;"}       |
 |                                           |                                       | - [Artemis only around until August]{style="color: red;"}      |
 +-------------------------------------------+---------------------------------------+----------------------------------------------------------------+
-| [sftp copy using dataq](#sdataq)          | Large files and datasets              | - [Robust, runs in background]{style="color: blue;"}           |
+| [sftp copy using copyq](#scopyq)          | Large files and datasets              | - [Robust, runs in background]{style="color: blue;"}           |
 |                                           | to copy all in one go.                | - [Faster speed than `lftp`]{style="color: blue;"}             |
 |                                           |                                       | - [Always copies all files]{style="color: red;"}               |
 +-------------------------------------------+---------------------------------------+----------------------------------------------------------------+
-| [lftp sync using dataq](#ldataq)          | Large datasets with many files and    | - [Robust, runs in background]{style="color: blue;"}           |
+| [lftp sync using copyq](#lcopyq)          | Large datasets with many files and    | - [Robust, runs in background]{style="color: blue;"}           |
 |                                           | only a few updated with each transfer.| - [Only copies whats changed]{style="color: blue;"}            |
 |                                           |                                       | - [Slower speed than `sftp`]{style="color: red;"}              |
 +-------------------------------------------+---------------------------------------+----------------------------------------------------------------+
@@ -56,7 +56,7 @@ In this section, we will look at Data Transfer. For the remaining challenges, pl
 | [Globus](#globus)                         | Any file/dataset size.                | - [Should do everything]{style="color: blue;"}                 |
 |                                           |                                       |   + [GUI]{style="color: blue;"}                                |
 |                                           |                                       |   + [Terminal copy and sync]{style="color: blue;"}             |
-|                                           |                                       |   + [`dataq` copy and sync]{style="color: blue;"}              |
+|                                           |                                       |   + [`copyq` copy and sync]{style="color: blue;"}              |
 |                                           |                                       | - [Unknown time-frame for availability]{style="color: red;"}   |
 +-------------------------------------------+---------------------------------------+----------------------------------------------------------------+
 
@@ -107,7 +107,7 @@ Depending on the size and complexity of the data you are transferring you have m
 
   + For mid sized transfers up to tens of GB you can use terminal based transfer.
 
-  + For large transfers you should use the data transfer queue options on either Gadi (`dataq`) or Artemis (`dtq`). 
+  + For large transfers you should use the data transfer queue options on either Gadi (`copyq`) or Artemis (`dtq`). 
 
 ::: {.callout-warning}
 All data transfer to and from Gadi should be made using the "Data Mover Node" at `gadi-dm.nci.org.au` where possible rather than the login nodes. This ensures that data transfer will not consume otherwise limited resources on the login nodes.
@@ -128,7 +128,7 @@ While simple to use, these are not recommended for large data transfers, as the 
 ::: {.callout-tip}
 ## Example using `cyberduck`
 
-The following are instructions using the `cyberduck` data transfer client. The process using `filezilla` is similar with the same username the same username and server IP address as shown in this example.
+The following are instructions using the `cyberduck` data transfer client. The process using `filezilla` is similar with the same username and server IP address as shown in this example.
 
 To mount your RDS drive in either Windows or MacOS, please follow the instructions described [here](https://sydneyuni.atlassian.net/wiki/spaces/RC/pages/228589620/Research+Data+Store). You should have a File Explorer (Windows) or Finder (MacOS) window open and displaying the files and folders in your RDS project directory.
 
@@ -138,7 +138,7 @@ Next download `cyberduck` from https://cyberduck.io and open it and connect to G
   2. Select **SFTP (SSH File Transfer Protocol)** from the drop-down menu at the top of box.
   3. In the **Server** field, enter `gadi-dm.nci.org.au`.
   4. In the **Username** field, enter your **NCI Username**.
-  5. In hte **Password** field, enter your **NCI password**.
+  5. In the **Password** field, enter your **NCI password**.
   6. Click **Connect**.
   7. If an **Unknown fingerprint** box appears, click the **Always** check box in the lower-left hand corner, then click **Allow**.
 
@@ -151,7 +151,7 @@ You can then transfer data to and from RDS and NCI by dragging and dropping file
 
 You can use commands in your terminal application (Mac and linux: Terminal, Windows: Windows Terminal or Powershell equivalent) as an alternative to graphical applications.
 
-Since the connection will be terminated if your computer sleeps, terminal crashes, network drops out etc, this method is not particularly robust for large transfers. For these rather use the queue based methods (either `copyq` or Gadi or `dtq` on Artemis) described below.
+Since the connection will be terminated if your computer sleeps, terminal crashes, network drops out etc, this method is not particularly robust for large transfers. For these rather use the queue based methods (either `copyq` on Gadi or `dtq` on Artemis) described below.
 
 #### Transfers from a terminal on Gadi
 
@@ -201,7 +201,7 @@ If you want to copy the other way around (ie. from Gadi /scratch to RDS) use
 This option is only available prior to the decommission of Artemis on 29 August 2025 - after that date you will have to use either GLOBUS (*preferred*), or copy data when logged into the Gadi terminal (either at the login shell or using `copyq` scripts).
 :::
 
-When logged into Artemis you can use the `rsync` or `scp` command to copy data directly to/from Gadi, since Gadi allows the kind to secure connection that these commands require.
+When logged into Artemis you can use the `rsync` or `scp` command to copy data directly to/from Gadi, since Gadi allows the kind of secure connection that these commands require.
 
 Using rsync will allow you to *sync* data between RDS and Gadi, this means that only files that have been updated since the last transfer will be copied. This will allow small changes to large datasets to be transferred quickly. 
 
@@ -246,15 +246,17 @@ If you want to copy the other way around (ie. from Gadi /scratch to RDS) then si
   ```
 :::
 
-#### Using `screen` to run your job in the background
+#### Using `tmux` to run your job in the background
 
 ::: {.callout-warning}
 While this method can help you run your copy job in the background over a long period of time, it is recommended to rather use the `copyq` transfer method described below for large file transfers, as running jobs on the login node can overwhelm their scant resources.
 :::
 
-You can run all of the above copy commands in a `screen` session which can be *detached* to the background allowing you to log out of Gadi and switch off your computer while the copy still runs in the background.
+You can run all of the above copy commands in a tmux session which can be *detached* to the background allowing you to log out of Gadi and switch off your computer while the copy still runs in the background.
 
-To do this, after logging in (step 1. above) enter the command `screen` at the prompt. This will send you into a screen terminal session, then inside the screen session enter the copy command (step 2. above) and the copy will start. Then while the copy command is running, enter `<ctrl> - d` to detach the screen session and return to the login prompt. You can now log out of Gadi while your copy job is running in the background on Gadi. To check its status simply log back into Gadi in a terminal (step 1. above) and enter the command `screen -r`. This will re-attach your running screen session and you can investigate its output to check if its done. When things are finished you can exit the running screen session by typing `exit` inside it.
+To do this, after logging in (step 1. above) enter the command `tmux` at the prompt. This will send you into a tmux terminal session, then inside the tmux session enter the copy command (step 2. above) and the copy will start. Then while the copy command is running, enter `<ctrl>-b` then `d` to detach the tmux session and return to the login prompt. You can now log out of Gadi while your copy job is running in the background on Gadi. To check its status simply log back into Gadi in a terminal (step 1. above) and enter the command `tmux attach`. This will re-attach your running tmux session and you can investigate its output to check if its done. When things are finished you can exit the running tmux session by typing `exit` inside it.
+
+For more info about tmux check [here](https://www.redhat.com/en/blog/introduction-tmux-linux).
 
 ### Transfer using `sftp` or `lftp` from Gadi `copyq`
 
@@ -416,6 +418,8 @@ remote_user=<unikey>
 remote_host=research-data-ext.sydney.edu.au
 remote_path=/rds/PRJ-<rds_project>/<remote_path>
 
+# NOTE: Add a trailing slash (/) to local_path if you don't want to create the
+# parent directory at the destination.
 local_path=<local_path>
 
 sftp ${remote_user}@${remote_host}:${remote_path} <<< $"put -r ${local_path}"
@@ -455,13 +459,16 @@ sftp ${remote_user}@${remote_host}:${remote_path} <<< $"put -r ${local_path}"
 # RDS:
 remote_user=<unikey>
 remote_host=research-data-ext.sydney.edu.au
+
+# NOTE: Add a trailing slash (/) to remote_path if you don't want to create the
+# parent directory at the destination. 
 remote_path=/rds/PRJ-<rds_project>/<remote_path>
 
 # Gadi:
 dest_path=/scratch/<nci_project>/<local_path>
 
 # Copy folder with sftp
-sftp -r ${remote_user}@${remote_host}:${remote_path}/${remote_dir} ${dest_path}
+sftp -r ${remote_user}@${remote_host}:${remote_path} ${dest_path}
 ```
 :::
 
@@ -483,9 +490,9 @@ cd /scratch/aa00
 mkdir -p /scratch/aa00/tm0000/workspace
 ```
 
-Copy the required data transfer script template from `/scratch/qc03` to your newly made workspace. In this case we ar copying from RDS
+Copy the required data transfer script template from `/scratch/qc03` to your newly made workspace. In this case we are copying from RDS
 to Gadi so we use the `from_rds_to_gadi.pbs` script. You can also cut and paste the template script into your editor from above and
-then save the edited script to your workspace.
+save the edited script to your workspace.
 
 ```bash
 cp /scratch/qc03/data-transfer-scripts/gadi-scripts/from_rds_to_gadi.pbs /scratch/aa00/tm0000/workspace
@@ -507,7 +514,7 @@ In the `# PBS` variables part of the script:
 
  + Increase the walltime if you are transferring large files, the limit on this queue is 10 hours.
 
- + Alter `-lstorage=scratch/<project>` as required. If you also need to access g/data, you can change this to `scratch/<project>+/gdata/<project>`. In this example we'll just use `/scratch/aa00`
+ + Alter `-lstorage=scratch/<project>` as required. If you also need to access g/data, you can change this to `scratch/<project>+g/data/<project>`. In this example we'll just use `scratch/aa00`
 
 In the body of the script: 
 
@@ -533,6 +540,9 @@ Here is what the script will look like when correctly edited for this example:
 # RDS:
 remote_user=tm0000     #Example unikey tm0000
 remote_host=research-data-ext.sydney.edu.au
+
+# NOTE: Add a trailing slash (/) to remote_path if you don't want to create the
+# parent directory at the destination. 
 remote_path=/rds/PRJ-Training/MyData
 
 # Gadi:
@@ -568,7 +578,7 @@ ls MyData
 
 #### Confirm transfers after competion
 
-To confirm the transfer was successful, you'll need to check your job logs. These are located in the same directory as your script and are named `transfer.o<jobid>`. Check for **Exit status: 0**. If you see this, the transfer was successful. 
+To confirm the transfer was successful, you'll need to check your job logs. These are located in the same directory as your script and are named `transfer.o<jobid>`. 
 
 However, this doesn't guarantee the integrity of the files. You should check the files themselves to ensure they are intact. You can do this using md5checksums. See this [SIH tidbits blogpost](https://sydney-informatics-hub.github.io/tidbits/safely-downloading-your-sequence-data-to-rds.html) about how to use these. You'll need to create md5checksums for the original files if they don't already exist and compare them after transfer.
 
@@ -673,6 +683,8 @@ For further info about copying data from Artemis `dtq` can be found in the [SIH 
 #PBS -W umask=022
 #PBS -q dtq
 
+# NOTE: Add a trailing slash (/) to source_path if you don't want to create the
+# parent directory at the destination. 
 source_path=/rds/PRJ-<project>/<path>/<file>
 
 destination=<user>@gadi-dm.nci.org.au
