--- a/notebooks/05_data_transfer.qmd
+++ b/notebooks/05_data_transfer.qmd
@@ -618,7 +618,7 @@ Note that when using this script to copy a folder you should ensure the target d
 #PBS -W umask=022
 #PBS -q copyq
 #PBS -l wd
-#PBS -lstorage=/scratch/<nci_project>
+#PBS -lstorage=scratch/<nci_project>
 
 remote_user=<unikey>
 remote_host=research-data-ext.sydney.edu.au
