--- a/notebooks/05_data_transfer.qmd
+++ b/notebooks/05_data_transfer.qmd
@@ -633,7 +633,7 @@ touch $outfile
 lftp -u ${remote_user}, sftp://${remote_host} <<EOF
 set xfer:log true
 set xfer:log-file "${outfile}"
-mirror --verbose -R ${source_path} ${remote_path}
+mirror -p --verbose -R ${source_path} ${remote_path}
 exit
 EOF
 ```
